improvement by using sass

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main class="page-main main__wrapper">
 
-      <h1 class="page-main__title">Милые штуки<br>ручной<br>работы для дома</h1>
+      <h1 class="page-main__main-title">Милые штуки<br>ручной<br>работы для дома</h1>
 
       <section class="products-type">
         <header class="products-type__header">
@@ -49,62 +49,62 @@
             </li>
         </header>
         <div class="product__wrapper">
-          <h2 class="product__title">Вязаные корзинки</h2>
+          <h2 class="page-main__title product__title">Вязаные корзинки</h2>
           <b class="product__label">Товар недели</b>
-          <p class="product__intro">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+          <p class="product__intro">Экологически чистая пряжа,<br>ручная работа. Доступны в шести<br>расцветках, и трех размерах.</p>
           <table class="product__options">
-            <tr>
+            <tr class="product__row">
               <td class="product__option">Цвет:</td>
               <td class="product__field">«Тиффани»/серый</td>
             </tr>
-           <tr>
+           <tr class="product__row">
              <td class="product__option">Диаметр:</td>
              <td class="product__field">25 см</td>
            </tr>
-           <tr>
+           <tr class="product__row">
              <td class="product__option">Высота:</td>
              <td class="product__field">15 см</td>
            </tr>
          </table>
-         <img class="product__picture" src="img/.svg" width="260" height="315" alt="«Вязаные корзинки»">
+         <img class="product__picture" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="«Вязаные корзинки»">
          <b class="product__price">Цена: 990 руб.</b>
          <a href="form.html" class="product__order button">Заказать</a>
       </div>
     </section>
     <section class="features">
       <div class="features__wrapper">
-        <h2 class="features__title">Коротко о нас:</h2>
+        <h2 class="features__title page-main__title">Коротко о нас:</h2>
         <ul class="features__list">
           <li class="features__item">
-            <img class="features__icon" src="img/.svg" width="260" height="315" alt="Иконка «Цветок»">
-            <p class="features__description">Экологически чистые материалы</p>
+            <img class="features__icon" src="img/icon-feature-1.svg" width="32" height="37" alt="Иконка «Цветок»">
+            <p class="features__description">Экологически<br>чистые материалы</p>
           </li>
           <li class="features__item">
-            <img class="features__icon" src="img/.svg" width="260" height="315" alt="Иконка «Купюра»">
-            <p class="features__description">Скандинавский стиль по российской цене</p>
+            <img class="features__icon" src="img/icon-feature-2.svg" width="47" height="27" alt="Иконка «Купюра»">
+            <p class="features__description">Скандинавский стиль<br>по российской цене</p>
           </li>
           <li class="features__item">
-            <img class="features__icon" src="img/.svg" width="260" height="315" alt="Иконка «Сердце»">
-            <p class="features__description">Увеличивает лайки на фотографиях</p>
+            <img class="features__icon" src="img/icon-feature-3.svg" width="34" height="27" alt="Иконка «Сердце»">
+            <p class="features__description">Увеличивает лайки<br>на фотографиях</p>
           </li>
           <li class="features__item">
-            <img class="features__icon" src="img/.svg" width="260" height="315" alt="Иконка «Клубок»">
-            <p class="features__description">Связано вручную с любовью и умилением</p>
+            <img class="features__icon" src="img/icon-feature-4.svg" width="35" height="34" alt="Иконка «Клубок»">
+            <p class="features__description">Связано вручную с<br>любовью и умилением</p>
           </li>
           <li class="features__item">
-            <img class="features__icon" src="img/.svg" width="260" height="315" alt="Иконка «Ракета»">
-            <p class="features__description">Поддержка отечественного производителя</p>
+            <img class="features__icon" src="img/icon-feature-5.svg" width="55" height="23" alt="Иконка «Ракета»">
+            <p class="features__description">Поддержка отечественного<br>производителя</p>
           </li>
           <li class="features__item">
-            <img class="features__icon" src="img/.svg" width="260" height="315" alt="Иконка «Подарок»">
-            <p class="features__description">Поставляется в подарочной упаковке</p>
+            <img class="features__icon" src="img/icon-feature-6.svg" width="33" height="32" alt="Иконка «Подарок»">
+            <p class="features__description">Поставляется в<br>подарочной упаковке</p>
           </li>
         </ul>
       </div>
     </section>
     <section class="reviews">
       <div class="reviews__wrapper">
-        <h2 class="reviews__title">Отзывы</h2>
+        <h2 class="reviews__title page-main__title">Отзывы</h2>
         <div class="reviews__list">
           <blockquote class="reviews__item">
             <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко
@@ -114,54 +114,58 @@
             <b class="reviews__author-user-name">@misssssiskras</b>
           </blockquote>
           <div class="reviews__links">
-            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-            <button class="reviews__next" type="button">Следующий отзыв</button>
+            <button class="reviews__prev" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+            <button class="reviews__next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
           </div>
           <a class="reviews__to-write button" href="#">Написать</a>
         </div>
       </div>
     </section>
     <section class="contacts">
-      <h2 class="contacts__title">Контакты</h2>
-      <table class="contacts__options">
-        <tr>
-          <td class="contacts__option">e-mail:</td>
-          <td class="contacts__field">info@mimimishkashop.ru</td>
-        </tr>
-       <tr>
-         <td class="contacts__option">адрес:</td>
-         <td class="product__field">г. Санкт-Петербург,<br>ул. Большая<br>Конюшенная,<br>д. 19/8, офис 101</td>
-       </tr>
-     </table>
-     <div class="map">
-       <h2 class="visually-hidden">Как нас найти</h2>
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.32085871572347!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya+Konyushennaya+Street%2C+19%2F8%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1534187712363"
-         width="320" height="457" style="border:0" allowfullscreen>
-       </iframe>
-     </div>
-     <a class="contacts__button button" href="#">Напишите нам</a>
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title page-main__title">Контакты</h2>
+        <table class="contacts__options">
+          <tr class="contacts__row">
+            <td class="contacts__option">e&ndash;mail:</td>
+            <td class="contacts__field contacts__field--active">info@mimimishkashop.ru</td>
+          </tr>
+          <tr class="contacts__row">
+            <td class="contacts__option">адрес:</td>
+            <td class="contacts__field">г. Санкт-Петербург,<br>ул. Большая<br>Конюшенная,<br>д. 19/8, офис 101</td>
+          </tr>
+        </table>
+      </div>
+       <div class="map">
+         <h2 class="visually-hidden">Как нас найти</h2>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.32085871572347!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya+Konyushennaya+Street%2C+19%2F8%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1534187712363"
+           width="320" height="457" style="border:0" allowfullscreen>
+         </iframe>
+       </div>
+       <div class="contacts__write-us">
+         <a class="contacts__button button" href="#">Напишите нам</a>
+      </div>
     </section>
   </main>
 
-  <footer class="page-footer">
+  <footer class="page-footer main__wrapper">
     <div class="page-footer__wrapper">
       <div class="page-footer__social social">
-        <b class="social__title">Давайте дружить!</b>
+        <b class="social__title visually-hidden">Давайте дружить!</b>
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в Твиттере</a>
+            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy"><span class="visually-hidden">Мы в Твиттере</span></a>
           </li>
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__text" href="#">Разработано</a>
+        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
       </div>
     </div>
   </footer>
