--- a/catalog.html
+++ b/catalog.html
@@ -6,91 +6,91 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header main__wrapper">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="86" height="35" alt="«Mishka»">
+        <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
+        <!-- <div class="main-nav__wrapper"> -->
           <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="catalog.html">Каталог товаров</a>
+            <li>
+              <a class="site-list__item" href="#" disabled>Каталог товаров</a>
             </li>
-            <li class="site-list__item">
-              <a href="#">Вязание на заказ</a>
+            <li>
+              <a class="site-list__item" href="#">Вязание на заказ</a>
             </li>
-            <li class="site-list__item">
-              <a href="#">Поиск по сайту</a>
+            <li>
+              <a class="site-list__item" href="#">Поиск по сайту</a>
             </li>
-            <li class="site-list__item">
-              <a href="#">Корзина: пока пуста</a>
+            <li>
+              <a class="site-list__item" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
-      </div>
+      <!-- </div> -->
       </nav>
     </header>
-    <main class="page-main">
-      <h1 class="page-main__title">Каталог товаров</h1>
+    <main class="page-main main__wrapper">
+      <h1 class="page-main__main-title page-main__main-title--catalog">Каталог товаров</h1>
       <ul class="catalog__list">
         <li class="catalog__item">
+          <img class="catalog__image" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
-          <img class="catalog__image" src="img.svg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <p class="catalog__description">Рост 30 см, вес 200 г</p>
           <div class="catalog__to-buy">
             <b class="catalog__price">1 200 руб.</b>
-            <a href="form.html" class="catalog__order button">Заказать</a>
+            <a href="form.html" class="catalog__order button"><span class="visually-hidden">Заказать</span></a></a>
           </div>
         </li>
         <li class="catalog__item">
+          <img class="catalog__image" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <h3 class="catalog__title">Корзинка для белья</h3>
-          <img class="catalog__image" src="img.svg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
           <div class="catalog__to-buy">
             <b class="catalog__price">690 руб.</b>
-            <a href="form.html" class="catalog__order button">Заказать</a>
+            <a href="form.html" class="catalog__order button"><span class="visually-hidden">Заказать</span></a>
           </div>
         </li>
         <li class="catalog__item">
+          <img class="catalog__image" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <h3 class="catalog__title">Большая корзинка для игрушек</h3>
-          <img class="catalog__image" src="img.svg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
           <div class="catalog__to-buy">
             <b class="catalog__price">1 500 руб.</b>
-            <a href="form.html" class="catalog__order button">Заказать</a>
+            <a href="form.html" class="catalog__order button"><span class="visually-hidden">Заказать</span></a></a>
           </div>
         </li>
       </ul>
       <section class="video">
         <h2 class="video__title">Процесс производства</h2>
-        <video width="260" height="150" controls="controls" poster="video/duel.jpg">
-          <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'>
+        <video class="video__play" width="260" height="150" controls="controls" poster="video/duel.jpg">
+          <source src="img/icon-video.svg" type='video/ogg; codecs="theora, vorbis"'>
         </video>
-        <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное
-         видео о том, как появляются наши товары.</p>
+        <p class="video__description">По просьбам наших<br>любимых фолловеров мы<br>сняли для вас подробное<br>
+          видео о том, как появляются<br>наши товары.</p>
          <a href="form.html" class="video__order button">Сделать заказ</a>
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer main__wrapper">
       <div class="page-footer__wrapper">
         <div class="page-footer__social social">
-          <b class="social__title">Давайте дружить!</b>
+          <b class="social__title visually-hidden">Давайте дружить!</b>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в Твиттере</a>
+              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy"><span class="visually-hidden">Мы в Твиттере</span></a>
             </li>
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="copyright__text" href="#">Разработано</a>
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
         </div>
       </div>
     </footer>
