--- a/form.html
+++ b/form.html
@@ -5,28 +5,28 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header main__wrapper">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="86" height="35" alt="«Mishka»">
+        <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
+        <!-- <div class="main-nav__wrapper"> -->
           <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="catalog.html">Каталог товаров</a>
+            <li>
+              <a class="site-list__item" href="catalog.html">Каталог товаров</a>
             </li>
-            <li class="site-list__item">
-              <a href="#">Вязание на заказ</a>
+            <li>
+              <a class="site-list__item" href="#">Вязание на заказ</a>
             </li>
-            <li class="site-list__item">
-              <a href="#">Поиск по сайту</a>
+            <li>
+              <a class="site-list__item" href="#">Поиск по сайту</a>
             </li>
-            <li class="site-list__item">
-              <a href="#">Корзина: пока пуста</a>
+            <li>
+              <a class="site-list__item" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
-      </div>
+      <!-- </div> -->
       </nav>
     </header>
     <main class="page-main">
@@ -115,27 +115,27 @@
     </form>
   </main>
 
-    <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <div class="page-footer__social social">
-          <b class="social__title">Давайте дружить!</b>
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy">Мы в Твиттере</a>
-            </li>
-          </ul>
-        </div>
-        <div class="page-footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </div>
+  <footer class="page-footer main__wrapper">
+    <div class="page-footer__wrapper">
+      <div class="page-footer__social social">
+        <b class="social__title visually-hidden">Давайте дружить!</b>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy"><span class="visually-hidden">Мы в Твиттере</span></a>
+          </li>
+        </ul>
       </div>
-    </footer>
+      <div class="page-footer__copyright copyright">
+        <a class="copyright__text" href="#">Разработано</a>
+        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
+      </div>
+    </div>
+  </footer>
   </body>
   </html>
