beginning of adaptive development

--- a/catalog.html
+++ b/catalog.html
@@ -34,8 +34,8 @@
       <h1 class="page-main__main-title page-main__main-title--catalog">Каталог товаров</h1>
       <ul class="catalog__list">
         <li class="catalog__item">
-          <img class="catalog__image" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
+          <img class="catalog__image" src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <p class="catalog__description">Рост 30 см, вес 200 г</p>
           <div class="catalog__to-buy">
             <b class="catalog__price">1 200 руб.</b>
@@ -43,8 +43,8 @@
           </div>
         </li>
         <li class="catalog__item">
-          <img class="catalog__image" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <h3 class="catalog__title">Корзинка для белья</h3>
+          <img class="catalog__image" src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
           <div class="catalog__to-buy">
             <b class="catalog__price">690 руб.</b>
@@ -52,8 +52,8 @@
           </div>
         </li>
         <li class="catalog__item">
-          <img class="catalog__image" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <h3 class="catalog__title">Большая корзинка для игрушек</h3>
+          <img class="catalog__image" src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Фото «Зайчик-попрыгайчик»">
           <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
           <div class="catalog__to-buy">
             <b class="catalog__price">1 500 руб.</b>
@@ -94,9 +94,9 @@
         </div>
       </div>
     </footer>
-    <section class="modal-order">
-      <h2 class="modal__title">Добавить в корзину</h2>
-      <b class="modal__text">Выберите размер:</b>
+    <section class="modal-order main__wrapper">
+      <h2 class="modal__title">Добавить<br>в корзину</h2>
+      <p class="modal__text">Выберите размер:</p>
       <ul class="modal__size-list">
         <li class="modal__size-item modal__size-item--active">s</li>
         <li class="modal__size-item">m</li>
