--- a/index.html
+++ b/index.html
@@ -8,27 +8,38 @@
   <body>
     <header class="page-header main__wrapper">
       <a class="page-header__logo">
-        <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
+          <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
         <!-- <div class="main-nav__wrapper"> -->
-          <ul class="main-nav__list site-list">
+          <ul class="main-nav__list main-nav__list--main">
             <li>
-              <a class="site-list__item" href="catalog.html">Каталог товаров</a>
+              <a class="main-nav__item main-nav__item--main" href="catalog.html">Каталог товаров</a>
             </li>
             <li>
-              <a class="site-list__item" href="#">Вязание на заказ</a>
-            </li>
-            <li>
-              <a class="site-list__item" href="#">Поиск по сайту</a>
-            </li>
-            <li>
-              <a class="site-list__item" href="#">Корзина: пока пуста</a>
+              <a class="main-nav__item main-nav__item--main" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
+          <ul class="main-nav__list main-nav__list--user">
+            <li>
+              <a class="main-nav__item main-nav__item--user" href="#">Поиск по сайту</a>
+            </li>
+            <li>
+              <a class="main-nav__item main-nav__item--user" href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+          <ul class="main-nav__list  main-nav__list--extra">
+              <li>
+                <a class="main-nav__item main-nav__item--extra" href="#">Новые поступления</a>
+              </li>
+              <li>
+                <a class="main-nav__item main-nav__item--extra" href="#">Распродажа</a>
+              </li>
+            </ul>
       <!-- </div> -->
       </nav>
+      <span class="page-header__delivery">Бесплатная доставка по России</span>
     </header>
 
     <main class="page-main main__wrapper">
@@ -169,9 +180,9 @@
       </div>
     </div>
   </footer>
-  <section class="modal-order">
-    <h2 class="modal__title">Добавить в корзину</h2>
-    <b class="modal__text">Выберите размер:</b>
+  <section class="modal-order main__wrapper">
+    <h2 class="modal__title">Добавить<br>в корзину</h2>
+    <p class="modal__text">Выберите размер:</p>
     <ul class="modal__size-list">
       <li class="modal__size-item modal__size-item--active">s</li>
       <li class="modal__size-item">m</li>
