development of responsive grid system of index page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </ul>
           <ul class="main-nav__list main-nav__list--user">
             <li>
-              <a class="main-nav__item main-nav__item--user" href="#">Поиск по сайту</a>
+              <a class="main-nav__item main-nav__item--search" href="#">Поиск по сайту</a>
             </li>
             <li>
               <a class="main-nav__item main-nav__item--user" href="#">Корзина: пока пуста</a>
