responsive grid system of index page is ready

--- a/form.html
+++ b/form.html
@@ -1,6 +1,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>«Mishka»</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -116,8 +117,8 @@
   </main>
 
   <footer class="page-footer main__wrapper">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__social social">
+    <img class="page-footer__logo" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
+    <div class="page-footer__social social">
         <b class="social__title visually-hidden">Давайте дружить!</b>
         <ul class="social__list">
           <li class="social__item">
@@ -135,7 +136,6 @@
         <a class="copyright__text" href="#">Разработано</a>
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
       </div>
-    </div>
   </footer>
   </body>
   </html>
