--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>«Mishka»</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header main__wrapper">
+    <header class="page-header main__wrapper container">
       <a class="page-header__logo">
           <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
       </a>
@@ -46,7 +47,7 @@
 
       <h1 class="page-main__main-title">Милые штуки<br>ручной<br>работы для дома</h1>
 
-      <section class="products-type">
+      <article class="products-type  container">
         <header class="products-type__header">
           <h2 class="visually-hidden">Категории товаров</h2>
           <ul class="products-type__list">
@@ -58,10 +59,13 @@
               <h3 class="products-type__title">Детские<br>игрушки</h3>
               <img class="products-type__icon" src="img/icon-toy.svg" width="60" height="60" alt="«Детские игрушки»">
             </li>
+          </ul>
         </header>
         <div class="product__wrapper">
-          <h2 class="page-main__title product__title">Вязаные корзинки</h2>
-          <b class="product__label">Товар недели</b>
+          <div class="product__wrapper--title">
+            <h2 class="page-main__title product__title">Вязаные корзинки</h2>
+            <b class="product__label">Товар недели</b>
+          </div>
           <p class="product__intro">Экологически чистая пряжа,<br>ручная работа. Доступны в шести<br>расцветках, и трех размерах.</p>
           <table class="product__options">
             <tr class="product__row">
@@ -77,43 +81,43 @@
              <td class="product__field">15 см</td>
            </tr>
          </table>
-         <img class="product__picture" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="«Вязаные корзинки»">
-         <b class="product__price">Цена: 990 руб.</b>
+         <p class="product__price">Цена: 990 руб.</p>
          <a href="form.html" class="product__order button">Заказать</a>
+         <img class="product__picture" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="«Вязаные корзинки»">
       </div>
-    </section>
-    <section class="features">
+    </article>
+    <section class="features  container">
       <div class="features__wrapper">
         <h2 class="features__title page-main__title">Коротко о нас:</h2>
         <ul class="features__list">
-          <li class="features__item">
+          <li class="features__item features__item--eco">
             <img class="features__icon" src="img/icon-feature-1.svg" width="32" height="37" alt="Иконка «Цветок»">
             <p class="features__description">Экологически<br>чистые материалы</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features__item--price">
             <img class="features__icon" src="img/icon-feature-2.svg" width="47" height="27" alt="Иконка «Купюра»">
             <p class="features__description">Скандинавский стиль<br>по российской цене</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features__item--likes">
             <img class="features__icon" src="img/icon-feature-3.svg" width="34" height="27" alt="Иконка «Сердце»">
             <p class="features__description">Увеличивает лайки<br>на фотографиях</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features__item-knitting">
             <img class="features__icon" src="img/icon-feature-4.svg" width="35" height="34" alt="Иконка «Клубок»">
             <p class="features__description">Связано вручную с<br>любовью и умилением</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features__item--rocket">
             <img class="features__icon" src="img/icon-feature-5.svg" width="55" height="23" alt="Иконка «Ракета»">
             <p class="features__description">Поддержка отечественного<br>производителя</p>
           </li>
-          <li class="features__item">
+          <li class="features__item features__item--packed">
             <img class="features__icon" src="img/icon-feature-6.svg" width="33" height="32" alt="Иконка «Подарок»">
             <p class="features__description">Поставляется в<br>подарочной упаковке</p>
           </li>
         </ul>
       </div>
     </section>
-    <section class="reviews">
+    <section class="reviews  container">
       <div class="reviews__wrapper">
         <h2 class="reviews__title page-main__title">Отзывы</h2>
         <div class="reviews__list">
@@ -121,9 +125,9 @@
             <p class="reviews__text">Я молодая мама, но все равно фотографии не набирали и близко
              такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и
            игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+           </blockquote>
             <cite class="reviews__author-name">Анастасия Красильникова</cite>
             <b class="reviews__author-user-name">@misssssiskras</b>
-          </blockquote>
           <div class="reviews__links">
             <button class="reviews__prev" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
             <button class="reviews__next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
@@ -133,7 +137,7 @@
       </div>
     </section>
     <section class="contacts">
-      <div class="contacts__wrapper">
+      <div class="contacts__wrapper  container">
         <h2 class="contacts__title page-main__title">Контакты</h2>
         <table class="contacts__options">
           <tr class="contacts__row">
@@ -148,7 +152,7 @@
       </div>
        <div class="map">
          <h2 class="visually-hidden">Как нас найти</h2>
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.32085871572347!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya+Konyushennaya+Street%2C+19%2F8%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1534187712363"
+         <iframe class="map__picture"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.32085871572347!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya+Konyushennaya+Street%2C+19%2F8%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1534187712363"
            width="320" height="457" style="border:0" allowfullscreen>
          </iframe>
        </div>
@@ -158,9 +162,9 @@
     </section>
   </main>
 
-  <footer class="page-footer main__wrapper">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__social social">
+  <footer class="page-footer main__wrapper container">
+    <img class="page-footer__logo" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
+    <div class="page-footer__social social">
         <b class="social__title visually-hidden">Давайте дружить!</b>
         <ul class="social__list">
           <li class="social__item">
@@ -178,10 +182,9 @@
         <a class="copyright__text" href="#">Разработано</a>
         <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
       </div>
-    </div>
   </footer>
-  <section class="modal-order main__wrapper">
-    <h2 class="modal__title">Добавить<br>в корзину</h2>
+  <section class="modal-order main__wrapper container">
+    <h2 class="modal__title">Добавить в корзину</h2>
     <p class="modal__text">Выберите размер:</p>
     <ul class="modal__size-list">
       <li class="modal__size-item modal__size-item--active">s</li>
