--- a/form.html
+++ b/form.html
@@ -6,36 +6,45 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header main__wrapper">
+    <header class="page-header main__wrapper container">
       <a class="page-header__logo">
-        <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
+          <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <!-- <div class="main-nav__wrapper"> -->
-          <ul class="main-nav__list site-list">
+        <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
+          <ul class="main-nav__list main-nav__list--main">
             <li>
-              <a class="site-list__item" href="catalog.html">Каталог товаров</a>
+              <a class="main-nav__item main-nav__item--main" href="catalog.html">Каталог товаров</a>
             </li>
             <li>
-              <a class="site-list__item" href="#">Вязание на заказ</a>
-            </li>
-            <li>
-              <a class="site-list__item" href="#">Поиск по сайту</a>
-            </li>
-            <li>
-              <a class="site-list__item" href="#">Корзина: пока пуста</a>
+              <a class="main-nav__item main-nav__item--main" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
-      <!-- </div> -->
+          <ul class="main-nav__list main-nav__list--user">
+            <li>
+              <a class="main-nav__item main-nav__item--search" href="#">Поиск по сайту</a>
+            </li>
+            <li>
+              <a class="main-nav__item main-nav__item--user" href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+          <ul class="main-nav__list  main-nav__list--extra">
+              <li>
+                <a class="main-nav__item main-nav__item--extra" href="#">Новые поступления</a>
+              </li>
+              <li>
+                <a class="main-nav__item main-nav__item--extra" href="#">Распродажа</a>
+              </li>
+            </ul>
       </nav>
+      <span class="page-header__delivery">Бесплатная доставка по России</span>
     </header>
-    <main class="page-main main__wrapper">
+    <main class="page-main">
       <h1 class="page-main__main-title page-main__main-title--form">Вязание на заказ</h1>
-      <form class="order" method="get" action="https://echo.htmlacademy.ru">
+      <form class="order container" method="get" action="https://echo.htmlacademy.ru">
         <p class="order__intoduction">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа
           и мы свяжемся с вами, чтобы уточнить детали.</p>
-        <fieldset class="order__field type">
+        <fieldset class="order__field order__field--type">
           <legend class="order__title">Тип</legend>
           <ul class="order__list type__list">
             <li class="type__item">
@@ -50,7 +59,7 @@
             </li>
           </ul>
       </fieldset>
-      <fieldset class="order__field color">
+      <fieldset class="order__field order__field--color">
         <legend class="order__title">Цвет</legend>
         <ul class="order__list color__list">
           <li class="color__item">
@@ -87,6 +96,7 @@
       </fieldset>
       <fieldset class="order__field order__client-data">
         <legend class="order__title">ФИО</legend>
+        <div class="order__list order__client-data__list">
         <label class="order__label client-data__title" for="order-name">Имя:</label>
         <input class="order__input client-data__input" id="order-name" type="text" name="userName"
           placeholder="Введите ваше имя*" required>
@@ -96,6 +106,7 @@
         <label class="order__label client-data__title" for="order-middle-name">Отчество:</label>
         <input class="order__input client-data__input" id="order-middle-name" type="text" name="userMiddlename"
           placeholder="Отчество, если желаете">
+        </div>
       </fieldset>
       <fieldset class="order__field order__phone">
         <label class="order__title phone__title" for="order-phone">Тел</label>
@@ -111,12 +122,14 @@
         <label class="order__title" for="order-message">Доп</label>
         <textarea class="order__message" id="order-message" name="user-message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
       </fieldset>
-      <b class="order__comment">*Поля обязательны для заполнения</b>
-      <button class="button order-button" type="submit" >Отправить заказ</button>
+      <div class="order__wrapper">
+        <b class="order__comment">*Поля обязательны для заполнения</b>
+        <button class="button order-button" type="submit" >Отправить заказ</button>
+      </div>
     </form>
   </main>
 
-  <footer class="page-footer main__wrapper">
+  <footer class="page-footer main__wrapper container">
     <img class="page-footer__logo" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
     <div class="page-footer__social social">
         <b class="social__title visually-hidden">Давайте дружить!</b>
