--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="page-header main__wrapper container">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
           <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
       </a>
       <nav class="main-nav">
