--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,11 @@
   <body>
     <header class="page-header main__wrapper container">
       <a class="page-header__logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1150px)" srcset="img/mishka-logo-desktop.png">
+          <source media="(min-width: 768px)" srcset="img/mishka-logo-tablet.png">
           <img class="page-header__logo--image" src="img/logo-mobile.svg" width="86" height="35" alt="«Mishka»">
+        </picture>
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle main-nav__toggle--open" type="button">Открыть меню</button>
