--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       <span class="page-header__delivery">Бесплатная доставка по России</span>
     </header>
 
-    <main class="page-main main__wrapper">
+    <main class="page-main container">
 
       <h1 class="page-main__main-title">Милые штуки<br> ручной<br> работы для дома</h1>
 
-      <article class="products-type  container">
+      <article class="products-type">
         <header class="products-type__header">
           <h2 class="visually-hidden">Категории товаров</h2>
           <ul class="products-type__list">
